# EnergyManagementSystem

./: .dockerignore  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile  GOAL.md  LICENSE  Makefile  README.md  SPEC.md  config.yaml  docker-compose.dev.yml  pyproject.toml
.playwright-mcp/: page-2026-06-27T19-16-55-932Z.yml  page-2026-07-03T09-36-59-107Z.yml  page-2026-07-03T09-37-07-925Z.yml  page-2026-07-03T09-38-14-169Z.yml  page-2026-07-03T09-38-22-156Z.yml  page-2026-07-03T14-23-02-498Z.yml  page-2026-07-03T14-23-17-744Z.yml
docs/: 2026-06-27-built-app-validation-handoff.md  2026-06-27-config-ui-build-log.md  2026-06-28-caching-analysis.md  2026-06-28-emotional-design-review.md  2026-06-28-energy-expert-review.md  2026-06-29-long-running-behavior-review.md  2026-06-29-on-track-tracking.md  2026-06-29-review-implementation.md  2026-07-01-product-roadmap.md  2026-07-12-apple-of-ems-roadmap.md  2026-07-12-settings-ux-audit.md  api-reference.md  charging-algorithm-research.md  config-reference.md  control-model.md  dashboard-navigation.md  energy-model.md  failure-modes.md  jetson-deployment.md  live-integration.md  minimax-research-findings.md  minimax-research-prompt.md  ml-layer.md  operator-runbook.md  perf-budgets.md  remote-access.md  v2-ev-control.md
ems/: alerts.py  analysis.py  authn.py  cars.py  confidence.py  config.py  connection.py  decisions.py  detectors.py  diagnostics.py  digest.py  domain.py  energy_flow.py  ev_advisor.py  ev_planner.py  ev_schedule.py  ev_session.py  export_package.py  finance.py  freshness.py  lifecycle.py  load_model.py  main.py  (+17 more)
(+358 files in other folders)
