[project]
name = "ems"
version = "0.0.1"
description = "Smart Energy Manager (HEMS)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["ems/tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["ems"]
